Prevented horizontal scroll

--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -22,6 +22,7 @@ body {
   background: rgb(255, 255, 255);
   font: 1em / 1.5 $text-font-stack;
   color: #444;
+  overflow-x: hidden;
 
   @include respond-to('medium') {
     font-size: 1.25em;
